; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/renesas_usbhs/extr_mod_gadget.c_usbhsg_ep_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/renesas_usbhs/extr_mod_gadget.c_usbhsg_ep_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_ep = type { i32 }
%struct.usbhsg_uep = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }
%struct.usbhs_pipe = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_ep*)* @usbhsg_ep_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usbhsg_ep_disable(%struct.usb_ep* %0) #0 {
  %2 = alloca %struct.usb_ep*, align 8
  %3 = alloca %struct.usbhsg_uep*, align 8
  %4 = alloca %struct.usbhs_pipe*, align 8
  %5 = alloca i64, align 8
  store %struct.usb_ep* %0, %struct.usb_ep** %2, align 8
  %6 = load %struct.usb_ep*, %struct.usb_ep** %2, align 8
  %7 = call %struct.usbhsg_uep* @usbhsg_ep_to_uep(%struct.usb_ep* %6)
  store %struct.usbhsg_uep* %7, %struct.usbhsg_uep** %3, align 8
  %8 = load %struct.usbhsg_uep*, %struct.usbhsg_uep** %3, align 8
  %9 = getelementptr inbounds %struct.usbhsg_uep, %struct.usbhsg_uep* %8, i32 0, i32 0
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.usbhsg_uep*, %struct.usbhsg_uep** %3, align 8
  %13 = call %struct.usbhs_pipe* @usbhsg_uep_to_pipe(%struct.usbhsg_uep* %12)
  store %struct.usbhs_pipe* %13, %struct.usbhs_pipe** %4, align 8
  %14 = load %struct.usbhs_pipe*, %struct.usbhs_pipe** %4, align 8
  %15 = icmp ne %struct.usbhs_pipe* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %1
  br label %28

17:                                               ; preds = %1
  %18 = load %struct.usbhsg_uep*, %struct.usbhsg_uep** %3, align 8
  %19 = call i32 @usbhsg_pipe_disable(%struct.usbhsg_uep* %18)
  %20 = load %struct.usbhs_pipe*, %struct.usbhs_pipe** %4, align 8
  %21 = call i32 @usbhs_pipe_free(%struct.usbhs_pipe* %20)
  %22 = load %struct.usbhsg_uep*, %struct.usbhsg_uep** %3, align 8
  %23 = getelementptr inbounds %struct.usbhsg_uep, %struct.usbhsg_uep* %22, i32 0, i32 1
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  %26 = load %struct.usbhsg_uep*, %struct.usbhsg_uep** %3, align 8
  %27 = getelementptr inbounds %struct.usbhsg_uep, %struct.usbhsg_uep* %26, i32 0, i32 1
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %27, align 8
  br label %28

28:                                               ; preds = %17, %16
  %29 = load %struct.usbhsg_uep*, %struct.usbhsg_uep** %3, align 8
  %30 = getelementptr inbounds %struct.usbhsg_uep, %struct.usbhsg_uep* %29, i32 0, i32 0
  %31 = load i64, i64* %5, align 8
  %32 = call i32 @spin_unlock_irqrestore(i32* %30, i64 %31)
  ret i32 0
}

declare dso_local %struct.usbhsg_uep* @usbhsg_ep_to_uep(%struct.usb_ep*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local %struct.usbhs_pipe* @usbhsg_uep_to_pipe(%struct.usbhsg_uep*) #1

declare dso_local i32 @usbhsg_pipe_disable(%struct.usbhsg_uep*) #1

declare dso_local i32 @usbhs_pipe_free(%struct.usbhs_pipe*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
